<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.sandy.android.expensetracker.MainActivity" >

	<item
		android:id="@+id/action_export"
		android:orderInCategory="100"
		android:icon="@drawable/ic_action_download"
		android:showAsAction="ifRoom"
		android:title="@string/label_mi_export"/>

    <item
        android:id="@+id/action_report"
        android:orderInCategory="99"
        android:icon="@drawable/ic_action_view_as_list_dark"
        android:showAsAction="always"
        android:title="@string/label_mi_report"/>

    <item
	    android:id="@+id/empty"
	    android:icon="@drawable/ic_action_overflow"
	    android:orderInCategory="101"
	    android:showAsAction="always"
	    android:title="@string/label_mi_overflow" >
	    <menu>
            <item
                android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:icon="@drawable/ic_action_settings"
                android:showAsAction="always"
                android:title="@string/label_mi_settings"/>
	    	<item
		        android:id="@+id/action_delete_all"
		        android:orderInCategory="100"
		        android:icon="@drawable/ic_action_discard"
		        android:showAsAction="always"
		        android:title="@string/label_mi_delete_all"/>
		</menu>
    </item>

</menu>
